--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">GooglePay Demo</string>
+
+    <string name="receiver_upi_id">bharatpe09907180536@yesbankltd</string>
+    <string name="receiver_name">SUPER SPECIALITY AYURVEDA CENTER</string>
 </resources>
